# sequoia-investment-collector

./: README.md  clean_names.py  index.html  known_company_ids.json  main.py  pyproject.toml  scraper_checkpoint.json  sequoia_companies.xlsx
.github/workflows/: deploy.yml
sequoia_tracker/: __init__.py  data_processor.py  data_storage.py  scraper.py
