[project]
name = "sequoia-investment-collector"
version = "0.1.0"
description = "红杉投资公司数据采集器"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sequoia_tracker"]
